src/index.scss
/* ----------------------------------
-- Document Reset
*/

* {
  display: block;
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
  border: 0;
  outline: none;
  font-size: 1rem;
  flex: none;
  line-height: 1;
  border-radius: 0;
  box-sizing: border-box;
}

[hidden] { display: none; }

script,
style,
head,
svg#sheet {
  display: none;
}

html {
  font-size: 16px;
  background: #121212;
}

row- {
  display: flex;
}

video-main.blocked::before {
  content: 'We are having trouble loading this video. Be sure that you\'re connected to the internet and that youtube.com isn\'t blocked on your network!';
  position: absolute;
  width: 85%;
  max-width: 70ex;
  font-size: .8rem;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: rgba(255,255,255,.5);
  line-height: 150%;
  z-index: -1;
}

/* ----------------------------------
-- Core Containers
*/

video-controls {
  position: relative;
  display: flex;
  z-index: 10;

  > *+* {
    border-left: 1px solid #000;
  }

  .active {
    background: #a41034;
  }

  button {
    padding: .75rem;
    background: #212121;
    svg {
      width: 1.5rem;
      height: 1.5rem;
      fill: rgba(255,255,255,0.8);
    }

    &:hover svg {
      fill: rgba(255,255,255,1);
    }
  }
}

break-toggle {
  padding: 1rem;
  background: #121212;
  color: rgba(255,255,255,0.5);
  label {
    display: flex;
    align-items: center;
    > *+* { margin-left: .75rem; }
    span { font-size: .75rem; }
    -webkit-user-select: none;
  }
}

@media (orientation: landscape) {

  html {
    font-size: 16px;
  }

  body {
    width: 100%;
    height: 100vh;
    color: #f2f2f2;
    display: flex;
    flex-direction: column;
    padding: 1rem;
    display: flex;
    overflow: hidden;
  }

  main {
    position: fixed;
    z-index: 0;
    top: 0rem;
    left: 0;
    width: 100%;
    height: 100%;
    background: #121212;

    row- {
      justify-content: space-between;
      width: 100%;
      height: 3rem;
    }
  }

  control-bar {
    position: absolute;
    bottom: 0;
    width: 100%;
    top: auto;
    transition: all .3s ease;
    transform: translateY(0%);
    background: #121212;
    .mouse-idle & {
      transform: translateY(100%);
    }
  }

  dialog {
    position: absolute;
    z-index: 2;
    width: 100%;
    max-width: 30rem;
    left: auto;
    top: 0;
    right: 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    background: none;
    transform: translate3d(100%,0,0);
    transition: transform .3s ease;

    row- {
      position: relative;
      background: #121212;
    }

    .dialog-open & {
      transform: translate3d(0,0,0);
    }
  }
}

@media (orientation: portrait) {

  body {
    overflow-x: hidden;
  }

  main {
    position: relative;
    padding-bottom: 57%;

    > * {
      position: absolute;
      top: 0;
      left: 0;
    }

    row- {
      justify-content: space-between;
      width: 100%;
      position: relative;
      height: 3rem;
      background: #212121;
    }
  }

  control-bar {
    position: absolute;
    bottom: 0;
    width: 100%;
    top: auto;
    transition: all .3s ease;
    transform: translateY(0%);
    background: #212121;
    .hidden {
      display: none;
    }
  }

  dialog {
    width: 100%;
    background: #121212;
    padding-top: .5rem;

    @media (min-width: 360px) {
      padding: 1rem;
    }

    row- {
      position: relative;
    }

    marker-list {
      padding: 1rem;
    }
  }
}

@media (max-width: 500px) {
  html {
    font-size: 14px;
  }
}

/* ----------------------------------
-- Core Elements
*/

input,
button {
  width: auto;
  padding: 1.1rem;
  font-size: 1.1rem;
}

button {
  background: #121212;
  color: #f2f2f2;
}

youtube-video.active {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 4rem;
  right: 0;
  button {
    display: none;
  }
}

youtube-video:not(.active) {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  z-index: 1;
  width: 270px;
  height: 113px;
  top: 2rem;
  left: 2rem;
  border: 1px solid rgba(255,255,255,0.2);

  iframe {
    height: 208px;
  }

  button {
    position: absolute;
    top: 0;
    left: 0;
    padding: 0.5rem;
    svg {
      width: 1rem;
      height: 1rem;
      fill: #fff;
    }
  }
}

/* ----------------------------------
-- Custom Scrollbars
*/

@mixin scrollbars($size, $color) {
  // For Google Chrome
  ::-webkit-scrollbar {
      width:  $size;
      height: $size;
  }

  ::-webkit-scrollbar-thumb {
      background: rgba(255,255,255,0.25);
  }

  ::-webkit-scrollbar-thumb:hover {
      background: rgba(255,255,255,0.5);
  }

  ::-webkit-scrollbar-track {
      background: $color;
  }

  // For Internet Explorer
  body {
    scrollbar-face-color: $color;
    scrollbar-track-color: $color;
  }
}

@include scrollbars(.5rem, #121212);

